compiler/testData/diagnostics/tests/ConstructorsOfPrimitives.fir.kt
fun test() {
    Double(<!NO_VALUE_FOR_PARAMETER!>)<!>
    Float(<!NO_VALUE_FOR_PARAMETER!>)<!>
    Long(<!NO_VALUE_FOR_PARAMETER!>)<!>
    Int(<!NO_VALUE_FOR_PARAMETER!>)<!>
    Short(<!NO_VALUE_FOR_PARAMETER!>)<!>
    Byte(<!NO_VALUE_FOR_PARAMETER!>)<!>
    Char(<!NO_VALUE_FOR_PARAMETER!>)<!>
    Boolean(<!NO_VALUE_FOR_PARAMETER!>)<!>
}
